promotions: fix rounded corners not on mobile

--- a/src/components/PromotionHeaderImage/PromotionHeaderImage.scss
+++ b/src/components/PromotionHeaderImage/PromotionHeaderImage.scss
@@ -21,8 +21,11 @@ $promotion-image-ratios: (
   max-height: 135px;
 }
 
-.c-promotion-header-image {
-  border-top-left-radius: 16px;
-  border-top-right-radius: 16px;
-  overflow: hidden;
+@include cudl-breakpoint(tablet) {
+  .c-promotion-header-image {
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+    margin-top: map-get($cudl-spacer-sizes, lg);
+    overflow: hidden;
+  }
 }
